Fix issues with map filters on tablet mode

--- a/covid-19-support/src/scss/main.scss
+++ b/covid-19-support/src/scss/main.scss
@@ -86,12 +86,6 @@ h6,
   position: absolute;
   border-top: 1px solid #ddd;
 
-  @include media-breakpoint-up(sm) {
-    padding-bottom: 0;
-    margin-top: 41px;
-    height: calc(100% - 83px);
-  }
-
   @include media-breakpoint-up(md) {
     margin-top: 0;
     height: 100%;
